<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">eSteth</string>
    <string name="application_key">ae9f10942b6897864f5ad8a9435ff5f4</string>
    <string name="member_login">Login</string>
    <string name="remember_me">Remember Me</string>
    <string name="login" tools:ignore="MissingTranslation">Login</string>
    <string name="sign_up">New User</string>
    <string name="forget_password">Forgot Password?</string>
    <string name="title_activity_splash_screen">SplashScreen</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="please_enter_your_pin_app">Enter your 4 digit code</string>
    <string name="please_connect_device">Please connect device.</string>
    <string name="couldnt_identify_file">Couldn\'t identify recorded file</string>
    <string name="couldnt_play_this_file">Couldn\'t play this file</string>
    <string name="uploading_profile_image">Uploading profile image</string>
    <string name="couldnt_find_position_of_files">Couldn\'t find recorded positions at this file</string>
    <string name="please_put_username">Please enter username</string>
    <string name="please_put_pass">Please enter password</string>
    <string name="please_put_all_field1">Please enter first name</string>
    <string name="please_put_all_field2">Please enter username</string>
    <string name="please_put_all_field3">Please enter email</string>
    <string name="please_put_all_field4">Please enter password</string>
    <string name="please_put_all_field5">Please enter confirm username</string>
    <string name="please_put_all_field6">Please enter username</string>
    <string name="title_paired_devices">Paired Devices</string>
    <string name="title_other_devices">Other Available Devices</string>
    <string name="button_scan">Search for devices</string>
    <string name="none_paired">No devices have been paired</string>
    <string name="scanning">Searching…</string>
    <string name="select_device">Select a device to connect</string>
    <string name="none_found">No devices found</string>
    <string name="screen_recording_permission_denied">Screen Recording Permission Denied</string>
    <string name="screen_recording_notification_title">Screen recording</string>
    <string name="screen_recording_notification_action_stop">Stop</string>
    <string name="screen_recording_notification_action_pause">Pause</string>
    <string name="screen_recording_notification_action_resume">Resume</string>
    <string name="screen_recording_started_toast">Screen recording started</string>
    <string name="screen_recording_stopped_toast">Screen Recording stopped</string>
    <string name="screen_recording_resumed_toast">Screen Recording resumed</string>
    <string name="screen_recording_paused_toast">Screen Recording paused</string>
    <string name="preference_enable_target_app_key" translatable="false">enable_app_target</string>
    <string name="preference_app_chooser_key" translatable="false">app_chosen</string>
    <string name="screenrecording_already_active_toast">Screen recording session already active</string>
    <string name="recording_failed_toast">Screen recording failed.</string>
    <string name="share_intent_title">Share recorded</string>
    <string name="savelocation_key" translatable="false">savelocation</string>
    <string name="fatal_exception_message">ScreenRecorder: Saving video failed! Log will be sent if enabled.</string>
    <string name="save_file_name">saveFileName</string>
    <string name="permission_check_dialog_title">This app needs some permissions</string>
    <string name="permission_check_dialog_message">Please grant access to location so this app can detect Tech4Life newPneu\'s Bluetooth devices.</string>
    <string name="permission_check_dialog_positive_button">OK</string>
    <string name="please_put_valid_email">Please enter valid email</string>
    <string name="please_put_eight_char">Password must be minimum 8 alphanumeric characters, including 1 upper case letter</string>
    <string name="put_valid_username">Username is not valid</string>
    <string name="pass_not_matched">Password does not match</string>
    <string name="please_select_gender">Please select gender</string>
    <string name="devices_not_connnected">Aux cable / Bluetooth Device is not connected</string>
    <string name="headset_connected">Headset connected</string>
    <string name="headset_disconnected">Aux cable is disconnected</string>
    <string name="bluetooth_device_connected">Bluetooth device connected</string>
    <string name="connecting_to_bluetooth_device">Connecting to bluetooth device</string>
    <string name="connected">Aux cable is Connected</string>
    <string name="please_enter_valid_email_address">Please enter valid email address</string>
    <string name="dont_have_an_account">Don\'t have an account?</string>
    <string name="group_name">Group Name</string>
    <string name="internet_problem">Internet connection has some problem</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="processing_request">Processing Your Request…</string>
    <string name="confirm_pin_code">Confirm PIN Code</string>
    <string name="confirm_pin_not_match">Confirm Pin code does not match</string>
    <string name="atleast_4_digit">Please type 4 digit code</string>
    <string name="type_pin">Please type Pin</string>
    <string name="fragment_pairing">Pairing</string>
    <string name="fragment_profile">Profile</string>
    <string name="fragment_myRecording">My Recordings</string>
    <string name="fragment_auscultation">Auscultation</string>
    <string name="fragment_myContacts">My Contacts</string>
    <string name="fragment_about">About eSteth</string>
    <string name="error_cropping">Error in Cropping</string>
    <string name="fragment_consultation">Consultation</string>
    <string name="logout">Logout</string>
    <string name="start">Start</string>
    <string name="test">Test</string>
    <string name="rec_status">Ready for Auscultation</string>
    <string name="txt_disconnected">Service is disconnected</string>
    <string name="txt_connected">Service is connected</string>
    <string name="txt_status">Status :</string>
    <string name="txt_start">Start</string>
    <string name="txt_stop">Stop</string>
    <string name="txt_position">You can’t change position while recording</string>
    <string name="txt_connection">Before record please connect eSteth bluetooth device</string>
    <string name="txt_title">No Device Found</string>
    <string name="txt_permission">Recording Audio permission denied</string>
    <string name="txt_sel_pos">Please select position before start recording</string>
    <string name="txt_norec">No recording is running.</string>
    <string name="txt_error">No recording is running.</string>
    <string name="txt_pos">Please select position before start recording</string>
    <string name="aus_msg">Auscultation successful…</string>
    <string name="aux_succes">Auscultation is completed</string>
    <string name="txt_record">Please Record first</string>
    <string name="txt_file">File name required</string>
    <string name="error_rec">Failed to create Recordings directory</string>
    <string name="txt_per">Screen Record Permission Denied</string>
    <string name="txt_save">Save</string>
    <string name="txt_skip">Skip</string>
    <string name="enter_valid_email">Please enter a valid email address</string>
    <string name="something_wrong">Something went wrong</string>
    <string name="creating_group">Creating group…</string>
    <string name="txt_ok">OK</string>
    <string name="txt_select_contacts">Please select contacts</string>
    <string name="txt_group_name_required">Group name required</string>
    <string name="txt_cancel">Cancel</string>
    <string name="txt_fail_upload_auscultation">Failed to upload Auscultation file, Auscultation file is too large</string>
    <string name="txt_sync_success">Auscultation sync successful</string>
    <string name="txt_failed_upload">Failed to upload Auscultation file</string>
    <string name="txt_email_exist">Email Already Registered</string>
    <string name="headset_unplugged">Headset is unplugged</string>
    <string name="headset_plugged">Headset is plugged</string>
    <string name="headset_state_unknown">\"I have no idea what the headset state is\"</string>
    <string name="txt_paired">Paired</string>
    <string name="txt_unpaired">UnPaired</string>
    <string name="txt_bt_connected">Bluetooth Connected</string>
    <string name="txt_loading_chat">Loading chat…</string>
    <string name="txt_me">Me</string>
    <string name="txt_confirm_delete">Confirm delete?</string>
    <string name="txt_yes">Yes</string>
    <string name="txt_no">No</string>
    <string name="txt_search">Search</string>
    <string name="txt_contacts_empty">Contacts list is empty</string>
    <string name="txt_send">Send</string>
    <string name="yes_option" translatable="false">Yes</string>
    <string name="no_option" translatable="false">No</string>
    <string name="covid_self_assessment_main_title" translatable="false">COVID-19 Self-Assessment</string>
    <string name="covid_self_assessment_sub_title_one" translatable="false">This self-assessment tool will help determine whether you may need further assessment for COVID-19. You can complete this assessment for yourself, or on behalf of someone else if they are unable to.</string>
    <string name="covid_self_assessment_sub_title_two" translatable="false">The Public Health Agency of Canada strongly urges anyone who has any of the following symptons: fever, cough, sore throat, runny nose, or headache to ISOLATE at home or another suitable location.</string>
    <string name="covid_self_assessment_navigation_note" translatable="false">Note: This tool is based on the Government of Canada COVID-19 self-assessment.</string>
    <string name="covid_self_assessment_page_two_title" translatable="false"><u>Question 1</u></string>
    <string name="covid_self_assessment_page_two_question" translatable="false">Are you experiencing any of the following:</string>
    <string name="covid_page_two_symptons" translatable="false">\n
                                               • Severe difficulty breathing\n\n
                                               • Severe chest pain\n\n
                                               • Having a very hard time waking up\n\n
                                               • Feeling confused\n\n
                                               • Losing consciousness\n</string>
    <string name="covid_self_assessment_page_three_title" translatable="false"><u>Question 2</u></string>
    <string name="covid_page_three_symptons" translatable="false">\n
                                               • Mild to moderate shortness of breath\n\n
                                               • Inability to lie down because of difficulty breathing\n\n
                                               • Chronic health conditions that you are having difficulty managing because of difficulty breathing\n\n
                                                </string>
    <string name="covid_self_assessment_page_four_title" translatable="false"><u>Question 3</u></string>
    <string name="covid_page_four_symptons" translatable="false">\n
                                               • Fever\n\n
                                               • Cough\n\n
                                               • Sore throat\n\n
                                               • Runny nose\n\n
                                               • Headache\n
                                                </string>
</resources>