<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RadioGroup
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="70dp"
        android:orientation="horizontal"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="@+id/textView9"
        app:layout_constraintStart_toStartOf="@+id/textView9"
        app:layout_constraintTop_toBottomOf="@+id/textView9">

        <RadioButton
            android:id="@+id/pageTwoYes"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:text="@string/yes_option"
            android:textSize="24sp" />

        <RadioButton
            android:id="@+id/pageTwoNo"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:text="@string/no_option"
            android:textSize="24sp" />
    </RadioGroup>

    <TextView
        android:id="@+id/assessmentTitle2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/covid_self_assessment_page_two_title"
        android:textAllCaps="true"
        android:textColor="#000000"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.113" />

    <TextView
        android:id="@+id/textView9"
        android:layout_width="354dp"
        android:layout_height="wrap_content"
        android:text="@string/covid_page_two_symptons"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="@+id/assessmentSubHeader2"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/assessmentSubHeader2"
        app:layout_constraintTop_toBottomOf="@+id/assessmentSubHeader2" />

    <TextView
        android:id="@+id/assessmentSubHeader2"
        android:layout_width="354dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/covid_self_assessment_page_two_question"
        android:textColor="#000000"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/assessmentTitle2"
        app:layout_constraintVertical_bias="0.0" />

</androidx.constraintlayout.widget.ConstraintLayout>