<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    >

    <AutoCompleteTextView
        android:layout_width="fill_parent"
        android:layout_height="40dp"
        android:layout_margin="5dp"
        android:padding="4dp"
        android:completionThreshold="2"
        android:hint="@string/txt_search"
        android:id="@+id/edit_text_contact_search"
        android:background="@drawable/search_edittextstyle"
        />
    <TextView
        android:id="@+id/emptyResults"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txt_contacts_empty"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true" />
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignRight="@+id/edit_text_contact_search"
        android:layout_alignEnd="@+id/edit_text_contact_search"
        android:id="@+id/linearLayout3">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/txt_send"
            android:id="@+id/addBtn" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/txt_cancel"
            android:id="@+id/cancelBtn" />
    </LinearLayout>

    <ListView
        android:layout_width="wrap_content"
        android:layout_height="505dp"
        android:id="@+id/contactListview"
        android:layout_gravity="center_vertical"
        android:layout_below="@+id/edit_text_contact_search"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_above="@+id/linearLayout3" />
</RelativeLayout>
