<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@mipmap/bg_new"
    >


    <LinearLayout
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/linearLayout7"
        android:layout_below="@+id/imageView2"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="20dp">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:background="@drawable/login_edittextstyle"
            android:id="@+id/txt_username"
            android:layout_margin="8dp"
            android:paddingLeft="10dp"
            android:textColorHint="@color/lightdark"
            android:hint="@string/username"
            android:layout_gravity="center_horizontal" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:background="@drawable/login_edittextstyle"
            android:inputType="textPassword"
            android:paddingLeft="10dp"
            android:textColorHint="@color/lightdark"
            android:hint="@string/password"
            android:layout_margin="8dp"
            android:ems="10"
            android:id="@+id/txt_userpass" />

        <Button
            android:layout_width="150dp"
            android:layout_height="40dp"
            android:text="@string/login"
            android:textColor="@color/white"
            android:background="@drawable/btn_red_curved"
            android:id="@+id/btn_login"
            android:layout_margin="5dp"
            android:layout_gravity="center_horizontal" />

        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content">


            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/remember_me"
                android:id="@+id/isRememberCheckBox"
                android:checked="false"
                android:layout_gravity="center_horizontal"
                android:height="12dp"
                android:layout_alignParentTop="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/forget_password"
                android:id="@+id/txt_forgotpass"
                android:textColor="@color/black"
                android:layout_marginRight="2dp"
                android:layout_gravity="center_horizontal"
                android:textIsSelectable="false"
                android:layout_alignBaseline="@+id/isRememberCheckBox"
                android:layout_alignBottom="@+id/isRememberCheckBox"
                android:layout_alignParentRight="true"
                android:layout_alignParentEnd="true" />


        </RelativeLayout>


        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_gravity="center_horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:text="@string/dont_have_an_account"
                android:id="@+id/textView3" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:textColor="@color/red"
                android:textStyle="bold"
                android:text="@string/sign_up"
                android:id="@+id/btn_signup"
                android:layout_gravity="center_horizontal" />
        </LinearLayout>


    </LinearLayout>

    <ImageView
        android:layout_width="150dp"
        android:layout_height="120dp"
        android:id="@+id/imageView2"
        android:src="@mipmap/ic_icon"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="23dp" />


</RelativeLayout>
