<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/assessmentTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/covid_self_assessment_main_title"
        android:textColor="#000000"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.077" />

    <TextView
        android:id="@+id/assessmentSubTitle"
        android:layout_width="364dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="56dp"
        android:text="@string/covid_self_assessment_sub_title_one"
        android:textAlignment="center"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.489"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/assessmentTitle" />

    <TextView
        android:id="@+id/assessmentSubTitle2"
        android:layout_width="364dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/covid_self_assessment_sub_title_two"
        android:textAlignment="center"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="@+id/assessmentSubTitle"
        app:layout_constraintHorizontal_bias="0.488"
        app:layout_constraintStart_toStartOf="@+id/assessmentSubTitle"
        app:layout_constraintTop_toBottomOf="@+id/assessmentSubTitle" />

    <TextView
        android:id="@+id/noteTitle"
        android:layout_width="364dp"
        android:layout_height="36dp"
        android:layout_marginBottom="16dp"
        android:text="@string/covid_self_assessment_navigation_note"
        android:textAlignment="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>